# retrofw2-rust

./: 0001-package-rust-build-and-install-cargo.patch  0002-package-cargo-bin-install-if-rust-bin-selected.patch  0003-package-rust-bin-host-variant-depends-on-host-cargo-.patch  0004-package-rust-drop-dependency-on-host-cargo-bin.patch  0005-package-ripgrep-depends-on-host-rustc.patch  0006-package-cargo-drop-package.patch  0007-docs-manual-cargo-packages-depend-on-host-rustc.patch  0008-package-rust-bump-to-1.40.patch  0009-package-cargo-bin-remove-and-use-cargo-bin-from-rust.patch  0010-Hardcode-target-to-mipsel-uclibc-is-built.patch  0011-Force-mips1.patch  0012-sdl_mixer-didn-t-build-so-I-clobbered-it-with-RetroF.patch  Cargo.toml  README.md  buildroot-config
.cargo/: config
slides/es/: .gitignore  charla.md
src/: controls.rs  geom.rs  gfx.rs  lib.rs  main.rs
