[package]
name = "retrofw2_rust"
version = "0.1.0"
authors = ["alex <alex@pdp7.net>"]
edition = "2018"

[dependencies]
sdl = "0.3.6"
ao_rs = { git = "https://github.com/danielrs/ao-rs", branch = "master" }
rand = { version = "0.8.1" , features = ["small_rng"] }
modulo = "0.1.2"

[features]
throttle = []
